Remove Blazor.Server project and add readme

--- a/src/Blazor.Wasm/wwwroot/index.html
+++ b/src/Blazor.Wasm/wwwroot/index.html
@@ -12,7 +12,13 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="fixed w-full h-screen flex items-center justify-center bg-gray-700 text-gray-200">
+            <span class="font-mono font-xl">
+                Loading...    
+            </span>    
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
